--- a/Assignment/app/src/main/res/values/strings.xml
+++ b/Assignment/app/src/main/res/values/strings.xml
@@ -44,5 +44,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="CheaterConfirmation">Are you sure you want to do this?</string>
+    <string name="CheaterConfirmationButton">Show answer</string>
+    <string name="BecomeCheaterButton">CHEAT!</string>
 
 </resources>
